test/error/sema/enum-assign-variant.dsk
let S = enum
    A
    B
end

S.A = 42
